# zarrs

./: .gitignore  .gitmodules  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  test_optional_element.rs  test_optional_from_metadata.rs
.cargo/: config.toml
.github/: codecov.yml
.github/workflows/: ci.yml  conformance.yml
doc/: BUILD.md  DATA_TYPE_AND_CODEC_COMPATIBILITY.md  TODO.md
zarrs/: Cargo.toml  build.rs
zarrs/benches/: array_blosc.rs  array_subset.rs  array_uncompressed.rs  codecs.rs  fill_value.rs  sharded_partial_read.rs
zarrs/doc/: ecosystem.md
zarrs/examples/: array_write_read.rs  array_write_read_ndarray.rs  array_write_read_string.rs  async_array_write_read.rs  async_http_array_read.rs  custom_data_type_fixed_size.rs  custom_data_type_float8_e3m4.rs  custom_data_type_uint12.rs  custom_data_type_uint4.rs  custom_data_type_variable_size.rs  data_type_optional.rs  data_type_optional_nested.rs  optional_data_type.rs  rectangular_array_write_read.rs  rectilinear_array_write_read.rs  sharded_array_write_read.rs  sync_http_array_read.rs  zarr_v2_to_v3.rs  zip_array_write_read.rs
zarrs/src/: array.rs  array_subset.rs  config.rs  convert.rs  group.rs  hierarchy.rs  indexer.rs  lib.rs  node.rs
zarrs/tests/: array_async.rs  array_async_partial_encode.rs  array_async_to_sync.rs  array_future_stabilisation.rs  array_ops.rs  array_ops_async.rs  array_partial_encode.rs  array_subchunk_ops.rs  array_sync.rs  array_sync_partial_encode.rs  cities.rs  codec_bitround.rs  codec_bound.rs  codec_runtime_registration.rs  codec_snapshot_tests.rs  fixed_length_utf32.rs  hierarchy.rs  indexer.rs  local_subchunk_grid.rs  optional_codec.rs  round_trips.rs  semantic_comparison.rs  unstructured_cartesian_chunk_grid.rs  v3_bytes.rs  zarr_python.rs  zarr_python_fixed_length_utf32.rs  (+1 more)
zarrs_chunk_grid/: CHANGELOG.md  Cargo.toml  README.md
zarrs_chunk_grid/src/: array_subset.rs  array_subset_traits.rs  chunk_shape_traits.rs  indexer.rs  iterators.rs  lib.rs
zarrs_chunk_grid/src/array_subset/: iterators.rs
zarrs_chunk_grid/src/array_subset/iterators/: contiguous_indices_iterator.rs  contiguous_linearised_indices_iterator.rs  indices_iterator.rs  linearised_indices_iterator.rs
zarrs_chunk_grid/src/iterators/: contiguous_indices_iterator.rs  contiguous_linearised_indices_iterator.rs  indices_iterator.rs  linearised_indices_iterator.rs
zarrs_chunk_key_encoding/: CHANGELOG.md  Cargo.toml  README.md
zarrs_chunk_key_encoding/src/: lib.rs
zarrs_codec/: CHANGELOG.md  Cargo.toml  README.md
zarrs_codec/src/: array_bytes.rs  array_bytes_fixed_disjoint_view.rs  byte_interval_partial_decoder.rs  codec_partial_default.rs  codec_specific_options.rs  codec_traits.rs  data_type_support.rs  lib.rs  options.rs  recommended_concurrency.rs
zarrs_codec/src/array_bytes/: array_bytes_offsets.rs  array_bytes_optional.rs  array_bytes_variable_length.rs
zarrs_codec/src/codec_traits/: array.rs  array_partial.rs  array_partial_async.rs  array_partial_sync.rs  array_to_array.rs  array_to_bytes.rs  bytes_partial.rs  bytes_partial_async.rs  bytes_partial_sync.rs  bytes_to_bytes.rs
zarrs_conformance/: Cargo.toml
zarrs_conformance/src/: main.rs
zarrs_data_type/: CHANGELOG.md  Cargo.toml
zarrs_data_type/src/: array_bytes.rs  codec_support.rs  codec_traits.rs  data_type.rs  data_type_extension.rs  data_type_extension_bitround_codec.rs  data_type_extension_bytes_codec.rs  data_type_extension_fixedscaleoffset_codec.rs  data_type_extension_packbits_codec.rs  data_type_extension_pcodec_codec.rs  data_type_extension_zfp_codec.rs  data_type_plugin.rs  fill_value.rs  lib.rs  optional.rs
zarrs_data_type/src/array_bytes/: array_bytes.rs  array_bytes_offsets.rs  array_bytes_optional.rs  array_bytes_variable_length.rs  error.rs
zarrs_data_type/src/codec_traits/: bitround.rs  bytes.rs  cast_value.rs  fixedscaleoffset.rs  packbits.rs  pcodec.rs  scale_offset.rs  zfp.rs
zarrs_data_type/src/codec_traits/cast_value/: kernels.rs
zarrs_filesystem/: CHANGELOG.md  Cargo.toml
zarrs_http/: CHANGELOG.md  Cargo.toml
zarrs_metadata/: CHANGELOG.md  Cargo.toml
zarrs_metadata_ext/: CHANGELOG.md  Cargo.toml
zarrs_metadata_ext/src/: chunk_grid.rs  chunk_key_encoding.rs  codec.rs  data_type.rs  lib.rs  v2_to_v3.rs
zarrs_metadata_ext/src/chunk_grid/: rectangular.rs  rectilinear.rs  regular.rs  unstructured_cartesian.rs
zarrs_metadata_ext/src/chunk_key_encoding/: default.rs  suffix.rs  v2.rs
zarrs_metadata_ext/src/codec/numcodecs/: adler32.rs  bitround.rs  bz2.rs  delta.rs  fixedscaleoffset.rs  fletcher32.rs  pcodec.rs  shuffle.rs  vlen_array.rs  zfpy.rs  zlib.rs
zarrs_metadata_ext/src/codec/registered/: blosc.rs  bytes.rs  cast_value.rs  crc32c.rs  gzip.rs  optional.rs  packbits.rs  reshape.rs  scale_offset.rs  sharding.rs  transpose.rs  vlen_bytes.rs  vlen_utf8.rs  zfp.rs  zstd.rs
zarrs_metadata_ext/src/codec/zarrs/: delta.rs  gdeflate.rs  morton.rs  optional.rs  squeeze.rs  vlen.rs  vlen_v2.rs
zarrs_metadata_ext/src/data_type/: fixed_length_utf32.rs  numpy_datetime64.rs  numpy_timedelta64.rs  optional.rs
zarrs_metadata_ext/src/data_type/numpy/: datetime64.rs  timedelta64.rs
zarrs_metadata_ext/src/group/: consolidated_metadata.rs
zarrs_metadata_numpy_time/: CHANGELOG.md  Cargo.toml  README.md
zarrs_metadata_numpy_time/src/: lib.rs  numpy_datetime64.rs  numpy_timedelta64.rs
zarrs_object_store/: CHANGELOG.md  Cargo.toml  README.md
zarrs_plugin/: CHANGELOG.md  Cargo.toml
zarrs_plugin/src/: extension_aliases.rs  extension_name.rs  extension_type.rs  lib.rs  macros.rs  maybe.rs  plugin.rs  runtime_plugin.rs  runtime_registry.rs  zarr_version.rs
zarrs_plugin/tests/: test_plugin.rs
zarrs_registry/: CHANGELOG.md  Cargo.toml
zarrs_shared/: CHANGELOG.md  Cargo.toml  README.md
zarrs_shared/src/: lib.rs  maybe.rs
zarrs_storage/: CHANGELOG.md  Cargo.toml
zarrs_url_pipeline/: Cargo.toml
zarrs_url_pipeline/src/: adapter.rs  error.rs  lib.rs  memory.rs  parse.rs  root.rs  stage.rs
zarrs_zip/: CHANGELOG.md  Cargo.toml
(+435 files in other folders)
