[workspace]

resolver = "2"

members = [
    "zarrs",
    "zarrs_chunk_grid",
    "zarrs_chunk_key_encoding",
    "zarrs_codec",
    "zarrs_data_type",
    "zarrs_metadata",
    "zarrs_metadata_ext",
    "zarrs_plugin",
    "zarrs_storage",
    "zarrs_filesystem",
    "zarrs_object_store",
    "zarrs_conformance",
]

[workspace.lints.rust]
unused_variables = "warn"
dead_code = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "warn"
missing_errors_doc = "warn"
# wildcard_enum_match_arm = "warn"

[workspace.dependencies.zarrs_chunk_grid]
version = "0.5.0"
path = "zarrs_chunk_grid"

[workspace.dependencies.zarrs_chunk_key_encoding]
version = "0.2.0"
path = "zarrs_chunk_key_encoding"

[workspace.dependencies.zarrs_codec]
version = "0.2.0"
path = "zarrs_codec"

[workspace.dependencies.zarrs_data_type]
version = "0.9.0"
path = "zarrs_data_type"

[workspace.dependencies.zarrs_metadata]
version = "0.7.2" # Nothing depends on 0.7.3 yet
path = "zarrs_metadata"

[workspace.dependencies.zarrs_metadata_ext]
version = "0.4.1"
path = "zarrs_metadata_ext"

[workspace.dependencies.zarrs_plugin]
version = "0.4.1"
path = "zarrs_plugin"

[workspace.dependencies.zarrs_storage]
version = "0.4.2"
path = "zarrs_storage"

[workspace.dependencies.zarrs_filesystem]
version = "0.3.9"
path = "zarrs_filesystem"

[workspace.dependencies.zarrs_object_store]
version = "0.6.2"
path = "zarrs_object_store"

[workspace.dependencies.object_store]
version = "0.13"

[workspace.dependencies.half]
version = "2.4.1"
features = ["bytemuck"]

[workspace.dependencies.num]
version = "0.4.1"

[workspace.dependencies.inventory]
version = "0.3.21"

[workspace.dependencies.paste]
version = "1.0.15"

[workspace.dependencies.thiserror]
version = "2.0.12"
