[package]
name = "zarrs_data_type"
version = "0.9.0"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2024"
rust-version = "1.91"
description = "The data type API for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_data_type"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_data_type"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs"]
categories = ["encoding"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
half.workspace = true
num.workspace = true
thiserror.workspace = true
derive_more = { version = "2.0.0", features = ["deref", "display", "from"] }
zarrs_metadata.workspace = true
zarrs_plugin.workspace = true
inventory.workspace = true
paste.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.71"

[dev-dependencies]
serde_json = { version = "1.0.71", features = ["float_roundtrip", "preserve_order"] }
bytemuck = { version = "1.14.0", features = ["extern_crate_alloc", "must_cast", "min_const_generics"] }
