[package]
name = "zarrs_metadata_ext"
version = "0.4.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.77"
description = "Zarr extensions metadata support for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_metadata_ext"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_metadata_ext"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "metadata", "extensions"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
derive_more = { version = "2.0.0", features = ["deref", "display", "from", "into"] }
monostate = "1.0.2"
num.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.71", features = ["float_roundtrip", "preserve_order"] }
serde_repr = "0.1.19"
thiserror.workspace = true
zarrs_metadata.workspace = true
zarrs_metadata_numpy_time.workspace = true
