[package]
name = "zarrs_plugin"
version = "0.3.1"
authors = ["Lachlan Deakin <ljdgit@gmail.com>"]
edition = "2021"
rust-version = "1.88"
description = "The plugin API for the zarrs crate"
homepage = "https://zarrs.dev"
documentation = "https://docs.rs/zarrs_plugin"
repository = "https://github.com/zarrs/zarrs/tree/main/zarrs_plugin"
license = "MIT OR Apache-2.0"
keywords = ["zarr", "zarrs", "plugin"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
paste = "1.0.15"
regex = "1.12.2"
thiserror.workspace = true
